--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>org.example</groupId>
     <artifactId>Aplicatie-de-rezervare-locuri-de-parcare</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-RELEASE</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main.class.name>org.loose.fis.sre.Main</main.class.name>
-        <final.jar.name>ceva</final.jar.name>
+        <final.jar.name>Aplicatie-de-rezervare-locuri-de-parcare</final.jar.name>
     </properties>
 
     <dependencies>
